cmake_minimum_required(VERSION 2.8)
project(DynaMind-ToolBox)

IF(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
	message(STATUS "Using Visual C compilers")
	set(CMAKE_CXX_FLAGS "/EHsc /bigobj")
	ADD_DEFINITIONS(-D_VARIADIC_MAX=9 -DCGAL_CFG_NO_CPP0X_ISFINITE)
ENDIF()

OPTION(WITH_INSTALLER "create a windows installer (NSIS)" OFF)
OPTION(WITH_INSTALLER_GDAL "create a windows installer (NSIS)" ON)
OPTION(WITH_UNIT_TESTS "build unit tests" OFF)
OPTION(WITH_PLUGIN_DYNALP "if with DYNALP plugin" OFF)
OPTION(WITH_PLUGIN_DYNAVIBE "if with DynaVIBe plugin" OFF)
OPTION(WITH_PLUGIN_BASICMODULES "if with BASICMODULES plugin" OFF)
OPTION(WITH_PLUGIN_GDALMODULE "if with GDALMODULES plugin" ON)
OPTION(WITH_PLUGIN_GDALDRAINAGE  "if with GDALDRAINAGE plugin" OFF)
OPTION(WITH_STANDALONE_EXE "if with standalon executeable" ON)
OPTION(WITH_GUI "if with GUI" ON)
OPTION(WITH_EXTENSIONS "if with Extensions plugin" ON)
OPTION(WITH_PLUGIN_PERFORMANCE_ASSESSMENT "if with performance assessment plugin" OFF)
OPTION(WITH_DOC "Create Docu" OFF)
OPTION(PYTHON_EMBEDDING "Embedding Python" ON)
OPTION(USEQT5 "Use Qt5" ON)
OPTION(QGL_FROM_SOURCE "Build QGLViewer from source" OFF)

set(QT_MAJOR_VERSION 4)
if(USEQT5)
    SET (QTDIR "c:/Qt/5.9.1/msvc2015")
    FIND_PACKAGE(Qt5Core)
    FIND_PACKAGE(Qt5Concurrent)
    FIND_PACKAGE(Qt5Gui)
    FIND_PACKAGE(Qt5Sql)
    FIND_PACKAGE(Qt5Test)
    FIND_PACKAGE(Qt5Xml)
    set(QT_MAJOR_VERSION 5)
    MESSAGE (STATUS "${Qt5Core_LIBRARIES}")
    MESSAGE (STATUS "${Qt5Concurrent_LIBRARIES}")
    MESSAGE (STATUS "${Qt5Gui_LIBRARIES}")
    MESSAGE (STATUS "${Qt5Sql_LIBRARIES}")
    MESSAGE (STATUS "${Qt5Test_LIBRARIES}")
    MESSAGE (STATUS "${Qt5Xml_LIBRARIES}")
endif()

IF(PYTHON_EMBEDDING)
    SET(PYTHON_EXECUTABLE "c:/Python35/python.exe")
    SET(PYTHON_LIBRARY "c:/Python35/libs/python35.lib")
    SET(PYTHON_LIBRARIES "c:/Python35/libs/python35.lib")
    SET(PYTHON_INCLUDE_DIR "c:/Python35/include")
    SET(PYTHON_INCLUDE_DIRS "c:/Python35/include")
    SET(PYTHON_INCLUDE_PATH "c:/Python35/include")
    SET(PYTHON_SITE_PACKAGES "c:/Python35/Lib/site-packages")
endif()
    
find_package(Git REQUIRED)

add_subdirectory(./3rdparty/sqlite3)

set(TOOLBOX DynaMind)

if(WITH_PLUGIN_BASICMODULES)
    set(TOOLBOX ${TOOLBOX} DynaMind-BasicModules)
endif()

if(WITH_GUI)
    set(TOOLBOX ${TOOLBOX} DynaMind-Gui)
endif(WITH_GUI)

if(WITH_EXTENSIONS)
    set(TOOLBOX ${TOOLBOX} DynaMind-Extensions)
endif(WITH_EXTENSIONS)

if(WITH_PLUGIN_DYNAVIBE)
    set(TOOLBOX ${TOOLBOX} DynaVIBe)
endif()

if(WITH_PLUGIN_DYNALP)
    set(TOOLBOX ${TOOLBOX} DynaMind-DynAlp)
endif()


if(WITH_PLUGIN_GDALMODULE)
    set(TOOLBOX ${TOOLBOX} DynaMind-GDALModules)
endif()

if(WITH_PLUGIN_PERFORMANCE_ASSESSMENT)
    set(TOOLBOX ${TOOLBOX} DynaMind-Performance-Assessment)
endif()

if(WITH_STANDALONE_EXE)
    set(TOOLBOX ${TOOLBOX} DynaMind-Executable)
endif()

file(MAKE_DIRECTORY ${DynaMind-ToolBox_BINARY_DIR}/output)

foreach (tool ${TOOLBOX})
    if(EXISTS ${CMAKE_SOURCE_DIR}/${tool}/src)
        message(STATUS "${tool} submodule already exists")
    else (EXISTS ${CMAKE_SOURCE_DIR}/${tool}/src)
        message(STATUS "preparing ${tool} submodule for you")
        execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive ${tool}
                    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
    endif (EXISTS ${CMAKE_SOURCE_DIR}/${tool}/src)
endforeach(tool ${TOOLBOX}) 

SET(DYNAMIND_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/DynaMind/src/core) 
SET(DYNAMIND_INCLUDE_DIR ${DYNAMIND_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/DynaMind/src/DMToolboxes) 
SET(DYNAMIND_INCLUDE_DIR ${DYNAMIND_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/DynaMind/src/python-swig) 
SET(DYNAMIND_EXTENSIONS_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/DynaMind-Extensions/src) 
SET(DYNAMIND_TOOLBOX_BUILD_DIR ${DynaMind-ToolBox_BINARY_DIR}/output)


foreach (tool ${TOOLBOX})
    add_subdirectory(${tool})
endforeach(${tool}) 

add_subdirectory(Data)

if(WITH_DOC)
    add_subdirectory(./doc/)
endif()

if(NOT USEQT5 AND WITH_INSTALLER)
    INCLUDE(DynaMind-ToolBoxCPack_with_Python.txt)
endif()
if(NOT USEQT5 AND WITH_INSTALLER_GDAL)
	INCLUDE(DynaMind-ToolBoxCPack_with_Python_sfcgal.txt)
endif()
if(USEQT5 AND WITH_INSTALLER_GDAL)
	INCLUDE(DynaMind-ToolBoxCPack_with_Python_sfcgal_QT5.txt)
endif()