

FILE(GLOB MODULE_CPPS *.cpp)

SET(PYTHON_EXECUTABLE "c:/Python35/python.exe")
SET(PYTHON_LIBRARY "c:/Python35/libs/python35.lib")
SET(PYTHON_INCLUDE_DIR "c:/Python35/include")
SET(PYTHON_INCLUDE_PATH "c:/Python35/include")

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIR})
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIR})

ADD_LIBRARY(dynamind-performance-assessment SHARED ${MODULE_CPPS} ${CD3_HELPER})

IF(USEQT5)
    TARGET_LINK_LIBRARIES(dynamind-performance-assessment cd3core ${DYNAMIND_TOOLBOX_LIBRARY}  ${DYNAMIND_CORE_LIBRARY} Qt5::Core)
ELSE()
    TARGET_LINK_LIBRARIES(dynamind-performance-assessment cd3core ${DYNAMIND_TOOLBOX_LIBRARY}  ${DYNAMIND_CORE_LIBRARY} ${QT_LIBRARIES})
ENDIF()

INSTALL(TARGETS dynamind-performance-assessment
		DESTINATION "share/DynaMind/Modules"
		PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)


