SET(LIBRARY_OUTPUT_PATH ${DYNAMIND_TOOLBOX_BUILD_DIR}/CD3Modules)

SET(PYTHON_EXECUTABLE "c:/Python35/python.exe")
SET(PYTHON_LIBRARY "c:/Python35/libs/python35.lib")
SET(PYTHON_INCLUDE_DIR "c:/Python35/include")
SET(PYTHON_INCLUDE_PATH "c:/Python35/include")

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIR})

FILE(GLOB_RECURSE CPP_FILES ./ *.cpp *.h)

SET(CPP_FILES ${CPP_FILES})

ADD_LIBRARY(dance4water-nodes SHARED ${CPP_FILES})

IF (MINGW)
        SET_TARGET_PROPERTIES(dance4water-nodes PROPERTIES PREFIX "")
endif()
    
TARGET_LINK_LIBRARIES(dance4water-nodes cd3core)

INSTALL(TARGETS dance4water-nodes
		DESTINATION "share/DynaMind/CD3Modules"
		PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
